--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
     "@langchain/google-genai": "^0.1.8",
+    "@langchain/groq": "^0.1.3",
     "@langchain/langgraph": "^0.2.44",
     "@langchain/textsplitters": "^0.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
